tests/dataset/tpc-ds/compiler/cpp/q45.error
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:79:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   79 |   decltype(ws) ws;
      |            ^~
      |            std::ws
In file included from /usr/include/c++/13/istream:1106,
                 from /usr/include/c++/13/iostream:42,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:3:
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:79:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   79 |   decltype(ws) ws;
      |            ^~
      |            std::ws
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:80:12: error: ‘c’ was not declared in this scope
   80 |   decltype(c) c;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:80:12: error: ‘c’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:81:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   81 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:81:12: error: ‘ca’ was not declared in this scope; did you mean ‘c’?
   81 |   decltype(ca) ca;
      |            ^~
      |            c
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:82:12: error: ‘i’ was not declared in this scope
   82 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:82:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:83:12: error: ‘d’ was not declared in this scope
   83 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:83:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:86:12: error: ‘ca’ was not declared in this scope
   86 |   decltype(ca.ca_zip) key;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:86:12: error: ‘ca’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:260:36: error: ‘substr’ was not declared in this scope
  260 |                                    substr(ca.ca_zip, 0, 5)) !=
      |                                    ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:29: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::__cxx11::basic_string<char>’)
  270 |                 if (__g.key == __key) {
      |                     ~~~~~~~ ^~ ~~~~~
      |                         |      |
      |                         int    std::__cxx11::basic_string<char>
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘const std::__new_allocator<_Tp>’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   ‘std::__cxx11::basic_string<char>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const _CharT*’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:4:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:7:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:270:32: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  270 |                 if (__g.key == __key) {
      |                                ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:271:44: error: cannot convert ‘WebSale’ to ‘int’ in initialization
  271 |                   __g.items.push_back(Base{ws, c, ca, i, d});
      |                                            ^~
      |                                            |
      |                                            WebSale
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:278:61: error: cannot convert ‘WebSale’ to ‘int’ in initialization
  278 |                     __struct7{__key, std::vector<Base>{Base{ws, c, ca, i, d}}});
      |                                                             ^~
      |                                                             |
      |                                                             WebSale
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:278:77: error: no matching function for call to ‘std::vector<Base>::vector(<brace-enclosed initializer list>)’
  278 |                     __struct7{__key, std::vector<Base>{Base{ws, c, ca, i, d}}});
      |                                                                             ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = Base; _Alloc = std::allocator<Base>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = Base; _Alloc = std::allocator<Base>; allocator_type = std::allocator<Base>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = Base; _Alloc = std::allocator<Base>; std::__type_identity_t<_Alloc> = std::allocator<Base>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = Base; _Alloc = std::allocator<Base>; allocator_type = std::allocator<Base>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = Base; _Alloc = std::allocator<Base>; allocator_type = std::allocator<Base>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = Base; _Alloc = std::allocator<Base>; std::__type_identity_t<_Alloc> = std::allocator<Base>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = Base; _Alloc = std::allocator<Base>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = Base; _Alloc = std::allocator<Base>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = Base; _Alloc = std::allocator<Base>; size_type = long unsigned int; value_type = Base; allocator_type = std::allocator<Base>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = Base; _Alloc = std::allocator<Base>; size_type = long unsigned int; allocator_type = std::allocator<Base>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = Base; _Alloc = std::allocator<Base>; allocator_type = std::allocator<Base>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = Base; _Alloc = std::allocator<Base>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:291:58: error: request for member ‘sales_price’ in ‘std::declval<Base>().Base::ws’, which is of non-class type ‘int’
  291 |             std::vector<decltype(std::declval<Base>().ws.sales_price)> __items;
      |                                                          ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:291:58: error: request for member ‘sales_price’ in ‘std::declval<Base>().Base::ws’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:291:70: error: template argument 1 is invalid
  291 |             std::vector<decltype(std::declval<Base>().ws.sales_price)> __items;
      |                                                                      ^
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:291:70: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:293:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  293 |               __items.push_back(x.ws.sales_price);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:293:38: error: request for member ‘sales_price’ in ‘x.Base::ws’, which is of non-class type ‘int’
  293 |               __items.push_back(x.ws.sales_price);
      |                                      ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:290:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:289:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  289 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:289:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  289 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq45353923469/001/prog.cpp:299:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<Base>’ requested
  244 |   std::vector<Base> base = ([&]() {
      |                            ~~~~~~~~
  245 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  246 |     for (auto ws : web_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  247 |       for (auto c : customer) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  248 |         if (!((ws.bill_customer_sk == c.c_customer_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  249 |           continue;
      |           ~~~~~~~~~
  250 |         for (auto ca : customer_address) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  251 |           if (!((c.c_current_addr_sk == ca.ca_address_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  252 |             continue;
      |             ~~~~~~~~~
  253 |           for (auto i : item) {
      |           ~~~~~~~~~~~~~~~~~~~~~
  254 |             if (!((ws.item_sk == i.i_item_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  255 |               continue;
      |               ~~~~~~~~~
  256 |             for (auto d : date_dim) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~
  257 |               if (!((ws.sold_date_sk == d.d_date_sk)))
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  258 |                 continue;
      |                 ~~~~~~~~~
  259 |               if (!((((((std::find(zip_list.begin(), zip_list.end(),
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  260 |                                    substr(ca.ca_zip, 0, 5)) !=
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  261 |                          zip_list.end()) ||
      |                          ~~~~~~~~~~~~~~~~~~
  262 |                         (std::find(item_ids.begin(), item_ids.end(),
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  263 |                                    i.i_item_id) != item_ids.end()))) &&
      |                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  264 |                       (d.d_qoy == qoy)) &&
      |                       ~~~~~~~~~~~~~~~~~~~~
  265 |                      (d.d_year == year))))
      |                      ~~~~~~~~~~~~~~~~~~~~~
  266 |                 continue;
      |                 ~~~~~~~~~
  267 |               auto __key = ca.ca_zip;
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  268 |               bool __found = false;
      |               ~~~~~~~~~~~~~~~~~~~~~
  269 |               for (auto &__g : __groups) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  270 |                 if (__g.key == __key) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~
  271 |                   __g.items.push_back(Base{ws, c, ca, i, d});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  272 |                   __found = true;
      |                   ~~~~~~~~~~~~~~~
  273 |                   break;
      |                   ~~~~~~
  274 |                 }
      |                 ~
  275 |               }
      |               ~
  276 |               if (!__found) {
      |               ~~~~~~~~~~~~~~~
  277 |                 __groups.push_back(
      |                 ~~~~~~~~~~~~~~~~~~~
  278 |                     __struct7{__key, std::vector<Base>{Base{ws, c, ca, i, d}}});
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  279 |               }
      |               ~
  280 |             }
      |             ~
  281 |           }
      |           ~
  282 |         }
      |         ~
  283 |       }
      |       ~
  284 |     }
      |     ~
  285 |     std::vector<__struct8> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  286 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  287 |       __items.push_back(__struct8{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  288 |           g.key, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~
  289 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  290 |           })(([&]() {
      |           ~~~~~~~~~~~
  291 |             std::vector<decltype(std::declval<Base>().ws.sales_price)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  292 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  293 |               __items.push_back(x.ws.sales_price);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  294 |             }
      |             ~
  295 |             return __items;
      |             ~~~~~~~~~~~~~~~
  296 |           })())});
      |           ~~~~~~~~
  297 |     }
      |     ~
  298 |     return __items;
      |     ~~~~~~~~~~~~~~~
  299 |   })();
      |   ~~^~
